# bugraid-itops-agent

./: .env.example  .gitignore  Dockerfile  INSTRUCTIONS.md  README.md  docker-compose.yml  learn.md  pyproject.toml  run_evaluation.py
data/: expected_outputs.json  neo4j_seed.cypher  rca_schema.json  synthetic_incidents.jsonl
docs/: arch.md  tradeoffs.md
scripts/: generate_data.py  seed_stores.py
src/: models.py
src/agents/: iterative_deepening.py  query_understanding.py  response_generator.py  retrieval_orchestrator.py
src/api/: main.py
src/retrieval/: melt_retriever.py  neo4j_retriever.py  opensearch_retriever.py
src/utils/: grounding.py  metrics.py
tests/: conftest.py  test_evaluation.py  test_grounding.py  test_iteration.py  test_query_understanding.py  test_retrieval.py
